# Overflow

./: .gitignore  .gitmodules  CMakeLists.txt  pch.h
Editor/res/materials/: Basic.mat  Basic.ovf10  __Default.mat  __Default.ovf10
Editor/res/scenes/: Default.ovf
Editor/res/shaders/: 2DQuads.frag  2DQuads.sha  2DQuads.vert  Basic.frag  Basic.ovf0  Basic.sha  Basic.vert  Default.vert  Invalid.frag  Test.sha  __Default.ovf0  __Default.sha
Editor/res/textures/defaults/: __Default.tex
Editor/res/textures/icons/app/: Icon_256.ovf0  Icon_256.tex  Icon_64.ovf0  Icon_64.tex
Editor/res/textures/icons/editor/inspector/: Options.tex
Editor/src/: AssetUtility.cpp  AssetUtility.h  Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  EditorWindowManager.cpp  EditorWindowManager.h  main.cpp
Editor/src/core/: EditorUtils.cpp  EditorUtils.h
Editor/src/core/serialization/: Deserealizer.cpp  Deserializer.h  Serializer.cpp  Serializer.h
Editor/src/windows/: EditorWindow.cpp  EditorWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  MenuBarWindow.cpp  MenubarWindow.h  ProjectWindow.cpp  ProjectWindow.h  SceneWindow.cpp  SceneWindow.h
Engine/: CMakeLists.txt  overflow.h
Engine/include/glad/: glad.c  glad.h
Engine/include/stb/: stb_image.cpp  stb_image.h
Engine/src/: Engine.cpp  Engine.h
Engine/src/assets/: Asset.cpp  Asset.h  AssetPipeline.cpp  AssetPipeline.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Tex2D.cpp  Tex2D.h
Engine/src/core/: FileDialogue.cpp  FileDialogue.h  Window.cpp  Window.h  core.h  log.cpp  log.h  math.cpp  math.h  time.cpp  time.h  utils.cpp  utils.h  uuid.cpp  uuid.h
Engine/src/ecs/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneRuntime.cpp  SceneRuntime.h
Engine/src/platform/windows/: Win_FileDialogue.cpp  Win_FileDialogue.h  Win_Window.cpp  Win_Window.h
Engine/src/rendering/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  RenderStructure.h  Renderer.cpp  Renderer.h
